--- a/index.html
+++ b/index.html
@@ -3,15 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>موقــعي</title>
+  <style>
+
+h1{
+    color:red ;
+    text-align: center;
+}
+
+  </style>
 
     <!-- 👇هنا style قم بإضافة وسم   -->
-    
 
 </head>
 <body>
     <!-- اكتب اسمك بعد مرحباً، -->
     <!-- headالى ال cssثم غير لون الخط عن طريق اضافة كود   -->
-    <h1>مرحبا، انا اسمي</h1>
+ <h1> مرحبا، انا اسمي رغد</h1>
 
 
     <!-- styles.css قم بإنشاء ملف جديد وقم بتسميته  -->
@@ -19,14 +26,14 @@
 
 
     <!-- قم بتغيير طريقة عرض الصور بحيث تظهر الصور تحت بعض -->
-    <img src="./img/ps4.png" alt="الكويت تبرمج">
-    <img src="./img/Nintendo.png" alt="الكويت تبرمج">
-    <img src="./img/pc.png" alt="الكويت تبرمج">
+   <div> <img src="./img/ps4.png" alt="الكويت تبرمج"></div>
+   <div> <img src="./img/Nintendo.png" alt="الكويت تبرمج"></div>
+  <div>  <img src="./img/pc.png" alt="الكويت تبرمج"></div>
 
      <!--  بعد ذلك قم باخفاء النقاط من القائمه  -->
      <div>
         <h3>منصات الالعاب المتوفره</h3>
-        <ul>
+        <ul style="list-style: none;">
             <li>PS4</li>
             <li>nintendo switch</li>
             <li>PC</li>
@@ -39,7 +46,8 @@
 <!-- Nintendo: red   -->
 <!-- PC:       green -->
 <!-- تلميح: يجب عليك اضافة كلاس لكل اسم -->
-    <table>
+    <table border="10">
+        
         <tr>
             <th>الاسم</th>
             <th>العمر</th>
@@ -47,37 +55,37 @@
             <th>المنصه</th>
         </tr>
         <tr>
-            <td>احمد</td>
+            <td style="background-color: blue;">احمد</td>
             <td>16</td>
             <td>call of duty</td>
             <td>PS4</td>
         </tr>
         <tr>
-            <td>ساره</td>
+            <td style="background-color: red;">ساره</td>
             <td>15</td>
             <td>mario party</td>
             <td>nintendo switch</td>
         </tr>
         <tr>
-            <td>علي</td>
+            <td style="background-color: green;">علي</td>
             <td>15</td>
             <td>league of legends</td>
             <td>PC</td>
         </tr>
         <tr>
-            <td>عبدالله</td>
+            <td style="background-color: blue;">عبدالله</td>
             <td>14</td>
             <td>fifa</td>
             <td>PS4</td>
         </tr>
         <tr>
-            <td>دانه</td>
+            <td style="background-color: red;">دانه</td>
             <td>22</td>
             <td>super smash bros</td>
             <td>nintendo switch</td>
         </tr>
         <tr>
-            <td>ليلى</td>
+            <td style="background-color: green;">ليلى</td>
             <td>17</td>
             <td>minecraft</td>
             <td>PC</td>
